Fix layout on small screens for bait report

--- a/src/components/report/preys/preys.css
+++ b/src/components/report/preys/preys.css
@@ -37,3 +37,26 @@
 .report__prey-options a span {
   margin-left: 0.3rem;
 }
+
+@media (max-width: 599px) {
+  .report__prey-options {
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  .report__prey-options a {
+    margin-left: 0;
+    margin-top: 0.8rem;
+  }
+}
+
+@media (max-width: 499px) {
+  .report__prey-filters {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .report__prey-filters > *:first-child {
+    margin-bottom: 1rem;
+    margin-right: 0;
+  }
+}
